Sales controller and routes
